apps/monitoring/vm-k8s-stack/ingress-grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.org/ssl-redirect: "true"
  labels:
    app.kubernetes.io/part-of: vm-k8s-stack
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - grafana.cluster.f4mily.net
      secretName: grafana-tls
  rules:
    - host: grafana.cluster.f4mily.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vm-k8s-stack-grafana
                port:
                  number: 80
